--- a/CordFIX.html
+++ b/CordFIX.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>관리코드 스마트 수정기 (옵션 보기)</title>
+  <title>관리코드 스마트 수정기 (코드 분리 적용)</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js"></script>
   <style>
@@ -114,7 +114,7 @@
     .badge-code { background: #ede9fe; color: var(--purple); }
     .badge-name { background: #dcfce7; color: var(--success); }
 
-    /* 컬럼 너비 */
+    /* 컬럼 너비 최적화 */
     .col-status { width: 90px; text-align: center; }
     .col-name   { width: 25%; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; }
     .col-old    { width: 12%; color: #94a3b8; font-family: monospace; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; }
@@ -351,19 +351,26 @@
     globalData.forEach((row, idx) => {
       const rawName = String(row[targetColKey] || "");
       const cleanName = rawName.replace(cleanNameRegex, "").trim();
+      const codeVal = String(row[codeColKey] || "").trim(); // 코드값 가져오기
+
       if (!cleanName) return;
 
-      if (!map.has(cleanName)) {
-        map.set(cleanName, {
-          cleanName: cleanName, rawName: rawName, 
-          originalCode: String(row[codeColKey] || "").trim(),
+      // [수정] 그룹핑 키 = 상품명 + "|||" + 코드
+      // 코드가 다르면(BK, BE) 다른 줄로 분리됨
+      const uniqueGroupKey = cleanName + "|||" + codeVal;
+
+      if (!map.has(uniqueGroupKey)) {
+        map.set(uniqueGroupKey, {
+          cleanName: cleanName,
+          rawName: rawName, 
+          originalCode: codeVal, // 이 그룹의 코드
           rows: []
         });
       }
-      map.get(cleanName).rows.push(idx);
+      map.get(uniqueGroupKey).rows.push(idx);
     });
 
-    map.forEach((val, key) => {
+    map.forEach((val, uniqueGroupKey) => {
       let finalCode = val.originalCode;
       let status = "ok";
       let matchType = "none";
@@ -376,9 +383,9 @@
       if (val.originalCode && dbCode[val.originalCode]) {
         finalCode = dbCode[val.originalCode];
         status = "auto"; matchType = "code"; codeMatch++;
-      } else if (!val.originalCode && dbName[key]) {
+      } else if (!val.originalCode && dbName[val.cleanName]) { // [수정] key가 아니라 val.cleanName 사용
         if (!isProductOne) {
-            finalCode = dbName[key];
+            finalCode = dbName[val.cleanName];
             status = "auto"; matchType = "name"; nameMatch++;
         }
       }
@@ -387,7 +394,7 @@
       else if (finalCode.length < 3) { status = "short"; errCount++; }
 
       groupData.push({
-        cleanName: key, displayName: val.rawName, originalCode: val.originalCode,
+        cleanName: val.cleanName, displayName: val.rawName, originalCode: val.originalCode,
         finalCode: finalCode, rows: val.rows, 
         status: status, matchType: matchType, excludeSave: excludeSave
       });
