--- a/CordFIX.html
+++ b/CordFIX.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>관리코드 스마트 수정기 (규칙 강제 적용)</title>
+  <title>관리코드 스마트 수정기 (안전모드)</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js"></script>
   <style>
@@ -196,7 +196,7 @@
   <div class="header">
     <div>
       <h1>🛠️ 관리코드 스마트 수정기</h1>
-      <p>하이브리드 자동완성 + 1번상품 제외 + 기존코드 덮어쓰기 적용</p>
+      <p>안전모드: 기존 코드가 있으면 이름 규칙을 적용하지 않습니다. (BK/BE 덮어쓰기 방지)</p>
     </div>
     <div style="display:flex; gap:8px;">
       <button class="btn btn-primary" onclick="openRuleManager()">⚙️ 규칙 관리 / 동기화</button>
@@ -324,6 +324,7 @@
       if (globalData.length === 0) { alert("데이터가 없습니다."); return; }
 
       const keys = Object.keys(globalData[0]);
+      // 컬럼 자동 인식
       targetColKey = keys.find(k => /제품선택|추가상품값|제품|옵션/.test(k.replace(/\s/g,'')));
       codeColKey = keys.find(k => /관리코드|상품코드|코드/.test(k.replace(/\s/g,'')));
       
@@ -378,18 +379,20 @@
       const isProductOne = /^[\s\[\(]*(?:no\.?)?0*1[\s\]\)\.\-]/i.test(val.rawName);
       if (isProductOne) { excludeSave = true; }
 
+      // 1. 코드 매칭 (코드 수정) - 최우선
       if (val.originalCode && dbCode[val.originalCode]) {
         finalCode = dbCode[val.originalCode];
         status = "auto"; matchType = "code"; codeMatch++;
       } 
-      // [수정된 로직] 기존 코드가 있어도, 이름 매칭 규칙이 있으면 덮어씀
-      // 단, 1번 상품은 제외
-      else if (dbName[val.cleanName]) { 
+      // 2. 이름 매칭 (공란 채움) - 기존 코드가 없을 때만 적용!
+      // [수정됨] 기존 코드가 있는데 DB에 이름 규칙이 있다고 해서 덮어쓰면 안됨. (BK/BE 구분 유지)
+      else if (!val.originalCode && dbName[val.cleanName]) { 
         if (!isProductOne) {
             finalCode = dbName[val.cleanName];
             status = "auto"; matchType = "name"; nameMatch++;
         }
       }
+      // [참고] 기존 코드가 있고, 코드 규칙은 없는데 이름 규칙은 있다면? -> 기존 코드 유지 (안전 모드)
       
       if (!finalCode) { status = "empty"; errCount++; } 
       else if (finalCode.length < 3) { status = "short"; errCount++; }
@@ -563,6 +566,11 @@
       if (item.originalCode && item.originalCode !== newCode) {
         dbCode[item.originalCode] = newCode;
       }
+      // 이름 매칭 규칙 저장
+      // 주의: 만약 다른 코드(BK/BE)를 가진 같은 이름의 상품이 있다면,
+      // 마지막에 수정한 놈이 DB를 덮어쓰게 됨. 
+      // 하지만 '안전 모드' 덕분에 다음에 불러올 때는 기존 코드가 있으면 무시되므로 괜찮음.
+      // 오직 '공란'일 때만 이 규칙을 쓰게 됨.
       dbName[item.cleanName] = newCode;
     } else {
       if(item.originalCode) delete dbCode[item.originalCode];
@@ -621,7 +629,7 @@
     groupData.forEach(group => {
       group.rows.forEach(rowIdx => {
         finalData[rowIdx][codeColKey] = group.finalCode;
-        finalData[rowIdx][targetColKey] = group.displayName; // 상품명 수정 반영
+        finalData[rowIdx][targetColKey] = group.displayName; 
       });
     });
     const ws = XLSX.utils.json_to_sheet(finalData);
