--- a/CordFIX.html
+++ b/CordFIX.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>옵션 & 코드 마스터 (버그 픽스)</title>
+  <title>옵션 & 코드 마스터 (완결판)</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js"></script>
   <style>
@@ -13,7 +13,6 @@
       --text: #1e293b; --text-sub: #64748b;
       --danger: #ef4444; --success: #10b981; --warning: #f59e0b; --purple: #8b5cf6;
       --linked-bg: #eff6ff; --linked-border: #3b82f6;
-      --group-even-bg: #f8fafc; --group-border: #cbd5e1;
     }
     body {
       font-family: 'Pretendard', -apple-system, sans-serif; background: var(--bg); color: var(--text);
@@ -198,8 +197,8 @@
 <div class="container">
   <div class="header">
     <div>
-      <h1>🔢 옵션 & 코드 마스터 (버그 완벽 수정)</h1>
-      <p>헤더 자동인식 + 입력 끊김 해결 + 색상 분리 + 순번 제어</p>
+      <h1>🔢 옵션 & 코드 마스터 (Final)</h1>
+      <p>입력 최적화(끊김없음) + 색상분리 + 순번제어 + 클라우드</p>
     </div>
     <div style="display:flex; gap:8px;">
       <button class="btn btn-primary" onclick="openRuleManager()">⚙️ 규칙/동기화</button>
@@ -350,26 +349,19 @@
       const wb = XLSX.read(data, {type: 'array'});
       const ws = wb.Sheets[wb.SheetNames[0]];
 
-      // [핵심 수정] 헤더 자동 찾기 로직 적용
-      // 1. 일단 배열로 읽음
+      // [핵심] 헤더 자동 탐지
       const rawData = XLSX.utils.sheet_to_json(ws, { header: 1 });
       let headerRowIndex = 0;
-
-      // 2. "제품선택"이나 "관리코드"가 있는 줄을 헤더로 간주 (최대 10줄 검색)
       for(let i=0; i<Math.min(rawData.length, 10); i++) {
-          const rowStr = rawData[i].join("").replace(/\s/g, "");
+          const rowStr = (rawData[i]||[]).join("").replace(/\s/g, "");
           if(rowStr.includes("제품선택") || rowStr.includes("관리코드") || rowStr.includes("옵션")) {
-              headerRowIndex = i;
-              break;
+              headerRowIndex = i; break;
           }
       }
-
-      // 3. 찾은 헤더부터 데이터 다시 읽기
       globalData = XLSX.utils.sheet_to_json(ws, { range: headerRowIndex, defval: "" });
 
       if (globalData.length === 0) { alert("데이터가 없습니다."); return; }
 
-      // 컬럼 자동 인식
       const keys = Object.keys(globalData[0]);
       targetColKey = keys.find(k => /제품선택|추가상품값|제품|옵션/.test(k.replace(/\s/g,'')));
       codeColKey = keys.find(k => /관리코드|상품코드|코드/.test(k.replace(/\s/g,'')));
@@ -377,8 +369,8 @@
       sizeColKey = keys.find(k => /사이즈|size|opt2/i.test(k.replace(/\s/g,'')));
       stockColKey = keys.find(k => /재고|수량|qty|stock/i.test(k.replace(/\s/g,'')));
 
-      if (!targetColKey) { alert("제품선택(상품명) 컬럼을 찾을 수 없습니다. 파일 양식을 확인해주세요."); return; }
-      if (!codeColKey) { codeColKey = "관리코드"; } // 없으면 가상의 키 사용
+      if (!targetColKey) { alert("제품선택(상품명) 컬럼을 찾을 수 없습니다."); return; }
+      if (!codeColKey) { codeColKey = "관리코드"; }
 
       processGroups();
     };
@@ -453,7 +445,7 @@
       });
     });
 
-    // 자동 묶기 로직 (코드 같으면 연결)
+    // 자동 묶기 (코드 같으면)
     for (let i = 1; i < groupData.length; i++) {
         const prev = groupData[i-1];
         const curr = groupData[i];
@@ -471,7 +463,6 @@
     document.getElementById('btnSave2').disabled = false;
   }
 
-  // 공통: 행 파싱 함수
   function parseRowInfo(rowIdx) {
       const row = globalData[rowIdx];
       let color = colorColKey ? String(row[colorColKey] || "").trim() : "";
@@ -489,7 +480,6 @@
       return { color, size, stock, name };
   }
 
-  // [신규] 색상별 분리 (Split)
   function splitByColor(idx) {
       const targetGroup = groupData[idx];
       const rows = targetGroup.rows;
@@ -606,12 +596,23 @@
       const btnClass = item.excludeSave ? "btn-no-match active" : "btn-no-match";
       const btnText = item.excludeSave ? "🔕 매칭X" : "🔔 매칭O";
       
-      let seqText = isSeqMode ? formatStr.replace('00', String(item.seq).padStart(2, '0')) : "-";
-      let linkIcon = (i > 0 && item.linkToPrev && isSeqMode) ? `<span class="link-icon active">↳</span>` : ``;
-      let seqDisplay = (isSeqMode && item.linkToPrev) ? `<span style="color:#cbd5e1;">${linkIcon}${seqText}</span>` : `${linkIcon}${seqText}`;
+      let seqText = "";
+      let linkIcon = "";
+      let seqDisplay = "";
+
+      if (isSeqMode) {
+          seqText = formatStr.replace('00', String(item.seq).padStart(2, '0'));
+          linkIcon = (i > 0 && item.linkToPrev && isSeqMode) ? `<span class="link-icon active">↳</span>` : ``;
+          if (item.linkToPrev) {
+             seqDisplay = `<span style="color:#cbd5e1;">${linkIcon}${seqText}</span>`;
+          } else {
+             seqDisplay = `${linkIcon}${seqText}`;
+          }
+      } else {
+          seqDisplay = "-"; 
+      }
 
       let splitBtn = "";
-      // 옵션이 2개 이상이고, 아직 분리되지 않은(대괄호 없는) 경우만 노출
       if (item.rows.length > 1 && !item.displayName.includes('[')) {
          splitBtn = `<button class="btn-split" onclick="splitByColor(${i})">🎨 분리</button>`;
       }
@@ -651,9 +652,9 @@
 
   function updateName(idx, val) { groupData[idx].displayName = val; }
 
-  // [핵심 수정] 입력 시에는 변수만 업데이트 (절대 저장하거나 리렌더링 하지 않음)
   function updateCode(idx, val) {
     groupData[idx].finalCode = val; 
+    // 저장 로직 제거 -> 파일 저장 버튼 누를 때 일괄 저장
   }
 
   // [신규] 일괄 저장 함수 (파일 저장 버튼 누를 때 실행)
@@ -683,27 +684,37 @@
 
   function toggleExclude(idx) {
     groupData[idx].excludeSave = !groupData[idx].excludeSave;
-    // 버튼 스타일만 변경 (전체 리렌더링 방지)
     const tr = document.querySelector(`input[oninput*="updateCode(${idx}"]`).closest('tr');
     const btn = tr.querySelector('.btn-no-match');
     btn.className = groupData[idx].excludeSave ? "btn-no-match active" : "btn-no-match";
     btn.textContent = groupData[idx].excludeSave ? "🔕 매칭X" : "🔔 매칭O";
   }
 
+  // [핵심 수정] 키보드 네비게이션 버그 해결
   function handleKeyDown(e, idx, type) {
+    // 방향키나 엔터가 아닐 경우 함수 종료 (입력 방해 금지)
+    if (!['Enter', 'ArrowDown', 'ArrowUp'].includes(e.key)) return;
+
     const rows = groupData.length;
     let nextIdx = idx;
+
     if (e.key === 'Enter' || e.key === 'ArrowDown') {
         e.preventDefault(); nextIdx = e.shiftKey ? idx - 1 : idx + 1;
     } else if (e.key === 'ArrowUp') {
         e.preventDefault(); nextIdx = idx - 1;
     }
+
     if (nextIdx >= 0 && nextIdx < rows) {
         const trs = document.querySelectorAll('#tbody tr');
+        // 명확한 셀렉터 사용
         const targetInput = type === 'name' 
             ? trs[nextIdx].querySelector('.name-input') 
             : trs[nextIdx].querySelector('.code-input-group input.common-input');
-        if(targetInput) { targetInput.focus(); targetInput.select(); }
+        
+        if(targetInput) { 
+            targetInput.focus(); 
+            targetInput.select(); // 이동했을 때만 전체선택
+        }
     }
   }
 
@@ -840,12 +851,12 @@
     const list = document.getElementById('optListArea');
     let html = `<table class="opt-table"><thead><tr><th>색상</th><th>사이즈</th><th>재고</th><th>원본명</th></tr></thead><tbody>`;
     item.rows.forEach(rowIdx => {
-        const info = parseRowInfo(rowIdx);
+        const r = globalData[rowIdx];
         html += `<tr>
-            <td style="font-weight:bold; color:#475569;">${info.color||'-'}</td>
-            <td>${info.size||'-'}</td>
-            <td>${info.stock||'-'}</td>
-            <td style="color:#94a3b8;">${info.name||''}</td>
+            <td style="font-weight:bold; color:#475569;">${r[colorColKey]||'-'}</td>
+            <td>${r[sizeColKey]||'-'}</td>
+            <td>${r[stockColKey]||'-'}</td>
+            <td style="color:#94a3b8;">${r[targetColKey]||''}</td>
         </tr>`;
     });
     html += `</tbody></table>`;
